// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KameletSchemaService should build the appropriate schema for kamelets 1`] = `
{
  "definition": {},
  "schema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "description": "Produces periodic events about beers!",
    "properties": {
      "period": {
        "default": 5000,
        "description": "The time interval between two events",
        "title": "Period",
        "type": "integer",
      },
    },
    "title": "Beer Source",
    "type": "object",
  },
  "title": "beer-source",
}
`;

exports[`KameletSchemaService should build the appropriate schema for kamelets with required properties 1`] = `
{
  "definition": {},
  "schema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "description": "Apply the XJ Template Transformation to transform JSON to XML and XML to JSON. ",
    "properties": {
      "direction": {
        "description": "The transform direction.",
        "enum": [
          "XML2JSON",
          "JSON2XML",
        ],
        "title": "Direction",
        "type": "string",
      },
      "template": {
        "description": "The inline template to apply a transformation through template.",
        "title": "Template",
        "type": "string",
      },
    },
    "required": [
      "direction",
      "template",
    ],
    "title": "XJ Template Action",
    "type": "object",
  },
  "title": "xj-template-action",
}
`;

exports[`KameletSchemaService should provide a default empty string if the kamelet name is not found 1`] = `
{
  "definition": {},
  "schema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "description": "Produces periodic events about beers!",
    "properties": {
      "period": {
        "default": 5000,
        "description": "The time interval between two events",
        "title": "Period",
        "type": "integer",
      },
    },
    "title": "Beer Source",
    "type": "object",
  },
  "title": "",
}
`;
